--- a/amqp-consumer/pom.xml
+++ b/amqp-consumer/pom.xml
@@ -2,19 +2,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.example</groupId>
         <artifactId>scdemo</artifactId>
         <version>1.0</version>
     </parent>
+
     <groupId>com.example</groupId>
-    <artifactId>amqp-log</artifactId>
+    <artifactId>amqp-consumer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>amqp-log</name>
+    <name>amqp-consumer</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
