--- a/amqp-consumer/src/main/resources/bootstrap.yml
+++ b/amqp-consumer/src/main/resources/bootstrap.yml
@@ -1,8 +1,8 @@
 server:
-  port: 8084
+  port: 8087
 spring:
   application:
-    name: amqp-log
+    name: amqp-consumer
   cloud:
     nacos:
       discovery:
