--- a/amqp-producer/src/main/resources/bootstrap.yml
+++ b/amqp-producer/src/main/resources/bootstrap.yml
@@ -1,9 +1,10 @@
 server:
-  port: 8083
+  port: 8086
 spring:
   application:
-    name: consumer
+    name: amqp-producer
   cloud:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+
