--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 server:
-  port: 9091
+  port: 9092
 
 spring:
   application:
-    name: order-ser
+    name: order-service
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
+
